# Baresha-Downloader

./: .gitattributes  .gitignore  BUILD_README.md  Baresha-Downloader-windows.spec  Baresha-Downloader.spec  CHANGELOG.md  CONTRIBUTING.md  CROSS_PLATFORM_README.md  GITHUB_ACTIONS_FIX.md  GUIDE.md  LICENSE  PAT_SETUP_GUIDE.md  README.md  RELEASE_GUIDE.md  SECURITY.md  build.bat  build_cross_platform.py  build_exe.py  create_tag.py  install.bat  install_ffmpeg.py  pyproject.toml  requirements.txt  run.bat  run.py  run.sh  test_release.py  youtube_downloader.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-release.yml  ci.yml  release.yml  scheduled.yml
tests/: __init__.py  test_basic.py
